# MightyBatticeLoltzmann

./: .gitignore  NODES.txt  README.md  cuda_basic_19.job.txt  cuda_mpi_03_DUMB_C.job.txt  cuda_mpi_04.job.txt  cuda_mpi_04_B.job.txt  cuda_mpi_04_BIG.job.txt  cuda_mpi_04_BIGGER.job.txt  cuda_mpi_04_BIGGER_B.job.txt  cuda_mpi_04_BIGGER_C.job.txt  cuda_mpi_04_BIGGEST_C.job.txt  cuda_mpi_04_BIG_B.job.txt  cuda_mpi_04_BIG_C.job.txt  cuda_mpi_04_C.job.txt  cuda_mpi_04_LONG_B.job.txt  cuda_mpi_04_LONG_C.job.txt  cuda_mpi_04_LONG_EXTREME_C.job.txt  cuda_mpi_04_LONG_MAX_B.job.txt  cuda_mpi_04_LONG_MAX_C.job.txt  cuda_mpi_04_OVERSUB_C.job.txt  cuda_mpi_04_STEP.job.txt  cuda_mpi_04_STEP_B.job.txt  cuda_mpi_04_STEP_C.job.txt  input_01.txt  input_02.txt  input_04.txt  input_cavity_video_E.txt  input_cavity_video_F.txt  input_cavity_video_G.txt  input_cavity_video_G_B.txt  input_cavity_video_G_C.txt  input_cavity_video_H.txt  input_cavity_video_H_B.txt  input_cavity_video_H_C.txt  input_cavity_video_I.txt  input_cavity_video_J.txt  input_cavity_video_K.txt  input_step_01.txt  input_step_02.txt  (+57 more)
executables/: main.cpp  meson.build
implementations/: commands.txt  main.cpp  meson.build  notes.txt
implementations/cpu/: meson.build
implementations/cpu/01/src/: collision.cpp  density.cpp  density.h  main.cpp
implementations/cpu/01/tools/: export.cpp  visualizer.py
implementations/cuda_basic/: meson.build
implementations/cuda_basic/01/src/: main.cpp  simulation.cu
implementations/cuda_basic/01/tools/: export.cpp  export.h
implementations/cuda_basic/02/src/: collision.cu  collision.cuh  density.cu  density.cuh  initialization.cu  main.cpp  streaming.cu  velocity.cu
implementations/cuda_basic/03/src/: collision.cu  collision.cuh  density.cu  density.cuh  initialization.cu  main.cpp  streaming.cu  streaming.cuh  velocity.cu  velocity.cuh
implementations/cuda_basic/04/src/: collision_streaming.cu  collision_streaming.cuh  density_velocity.cu  density_velocity.cuh  initialization.cu  main.cpp
implementations/cuda_basic/05/src/: fullyfused.cu  fullyfused.cuh  main.cpp  simulation.cu
implementations/cuda_basic/06/src/: config.cuh  fullyfused.cu  fullyfused.cuh  initialization.cu  initialization.cuh  main.cpp  simulation.cu  simulation.cuh
implementations/cuda_basic/07/src/: fullyfused.cu  main.cpp  simulation.cu
implementations/cuda_basic/07/tools/: export.cpp  export.h
implementations/cuda_basic/08/src/: fullyfused.cu  fullyfused.cuh  initialization.cu  main.cpp  simulation.cu
implementations/cuda_basic/09/src/: config.cuh  fullyfused.cu  main.cpp  simulation.cu
implementations/cuda_basic/10/src/: fullyfused.cu  initialization.cu  main.cpp  simulation.cu
implementations/cuda_basic/11/src/: fullyfused.cu  fullyfused.cuh  initialization.cu  initialization.cuh  main.cpp  simulation.cu
implementations/cuda_basic/12/src/: fullyfused.cu  fullyfused.cuh  initialization.cu  initialization.cuh  main.cpp  simulation.cu
implementations/cuda_basic/13/src/: fullyfused.cu  initialization.cu  initialization.cuh  main.cpp  simulation.cu  simulation.cuh
implementations/cuda_basic/14/src/: initialization.cu  initialization.cuh  main.cpp  simulation.cu  simulation.cuh
implementations/cuda_basic/15/src/: main.cpp  simulation.cu
implementations/cuda_basic/16/src/: main.cpp  simulation.cu
implementations/cuda_basic/17/: benchmarks.txt
implementations/cuda_basic/17/src/: initialization.cuh  main.cpp  simulation.cu
implementations/cuda_basic/18/: benchmark.txt  benchmarks.txt
implementations/cuda_basic/18/src/: main.cpp  simulation.cu  simulation.cuh
implementations/cuda_basic/19/: benchmarks.txt
implementations/cuda_basic/19/src/: initialization.cu  initialization.cuh  main.cpp  simulation.cu  simulation.cuh
implementations/cuda_basic/tools/: benchmarks.txt  config.cuh  data_export.cpp  data_export.h  data_processing.cu  data_processing.cuh  export.cpp  export.h  helper.cu  utilities.cpp  utilities.h  visualizer.py  visualizer_01.py  visualizer_02.py  visualizer_03.py  visualizer_04.py  visualizer_A.py  visualizer_B.py  visualizer_C.py
implementations/cuda_basic/tools_fp32/: config.cuh  data_export.h  visualizer_01.py  visualizer_04.py
implementations/cuda_basic/tools_fp64/: data_export.cpp  data_export.h
implementations/cuda_mpi/: meson.build
implementations/cuda_mpi/01/src/: initialization.cu  initialization.cuh  main.cpp  simulation.cu  simulation.cuh
implementations/cuda_mpi/02/src/: main.cpp  simulation.cu  simulation.cuh
implementations/cuda_mpi/03/: benchmarks_fp32.txt
implementations/cuda_mpi/03/src/: initialization.cuh  main.cpp  simulation.cu
implementations/cuda_mpi/04/: benchmarks_fp32.txt  benchmarks_fp32_oversub.txt  benchmarks_fp64.txt  benchmarks_steps_single_fp32.txt  benchmarks_steps_single_fp64.txt
implementations/cuda_mpi/04/src/: main.cpp  simulation.cu  simulation.cuh
implementations/cuda_mpi/05/src/: initialization.cu  main.cpp  simulation.cu  simulation.cuh
implementations/cuda_mpi/06/: benchmarks.txt
implementations/cuda_mpi/06/src/: initialization.cu  main.cpp  simulation.cu  simulation.cuh
implementations/cuda_mpi/07/src/: initialization.cu  initialization.cuh  main.cpp  simulation.cu  simulation.cuh
implementations/cuda_mpi/tools/: config.cuh  data_export.cpp  data_export.h  utilities.h  visualizer_01.py  visualizer_04.py  visualizer_05.py  visualizer_06.py  visualizer_07.py  visualizer_perf_multi.py  visualizer_perf_single.py  visualizer_test.py
implementations/milestones/: meson.build
implementations/milestones/02/src/: main.cpp  streaming.cu  streaming.cuh
implementations/milestones/03/src/: main.cpp
job_scripts_output/: job_617672.err  job_617702.err  job_617702.out  job_618962.err  job_618962.out  job_657867.err  job_657867.out  job_680695.err  job_683676.err  job_683676.out  job_689519.out  job_689572.out  job_689592.out  job_689761.err  job_689761.out  job_703041.out  job_718936.err  job_718943.out  job_722134.out  job_734947.out  job_735044.err  job_735044.out  job_737436.err  job_737436.out  (+4 more)
(+62 files in other folders)
