# all exectuables for the single-GPU CUDA implementations

executable(
    'cuda_basic_01',
    ['01/src/main.cpp',
     '01/src/simulation.cu',
     '01/tools/export.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_02',
    ['02/src/main.cpp',
     '02/src/collision.cu',
     '02/src/density.cu',
     '02/src/initialization.cu',
     '02/src/streaming.cu',
     '02/src/velocity.cu',
     '02/tools/export.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_03',
    ['03/src/main.cpp',
     '03/src/collision.cu',
     '03/src/density.cu',
     '03/src/initialization.cu',
     '03/src/streaming.cu',
     '03/src/velocity.cu',
     '03/tools/export.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_04',
    ['04/src/main.cpp',
     '04/src/collision_streaming.cu',
     '04/src/density_velocity.cu',
     '04/src/initialization.cu',
     '04/tools/export.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_05',
    ['05/src/main.cpp',
     '05/src/fullyfused.cu',
     '05/src/initialization.cu',
     '05/tools/export.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_06',
    ['06/src/main.cpp',
     '06/src/fullyfused.cu',
     '06/src/initialization.cu',
     '06/tools/export.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_07',
    ['07/src/main.cpp',
     '07/src/fullyfused.cu',
     '07/src/initialization.cu',
     '07/tools/export.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_08',
    ['08/src/main.cpp',
     '08/src/fullyfused.cu',
     '08/src/initialization.cu',
     '08/tools/export.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)
