# all exectuables for the single-GPU CUDA implementations

executable(
    'cuda_basic_01',
    ['01/src/main.cpp',
     '01/src/simulation.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_02',
    ['02/src/main.cpp',
     '02/src/collision.cu',
     '02/src/density.cu',
     '02/src/initialization.cu',
     '02/src/streaming.cu',
     '02/src/velocity.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_03',
    ['03/src/main.cpp',
     '03/src/collision.cu',
     '03/src/density.cu',
     '03/src/initialization.cu',
     '03/src/streaming.cu',
     '03/src/velocity.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_04',
    ['04/src/main.cpp',
     '04/src/collision_streaming.cu',
     '04/src/density_velocity.cu',
     '04/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_05',
    ['05/src/main.cpp',
     '05/src/fullyfused.cu',
     '05/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_06',
    ['06/src/main.cpp',
     '06/src/fullyfused.cu',
     '06/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_07',
    ['07/src/main.cpp',
     '07/src/fullyfused.cu',
     '07/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_08',
    ['08/src/main.cpp',
     '08/src/fullyfused.cu',
     '08/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_09',
    ['09/src/main.cpp',
     '09/src/fullyfused.cu',
     '09/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_10',
    ['10/src/main.cpp',
     '10/src/fullyfused.cu',
     '10/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_11',
    ['11/src/main.cpp',
     '11/src/fullyfused.cu',
     '11/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_12',
    ['12/src/main.cpp',
     '12/src/fullyfused.cu',
     '12/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)


executable(
    'cuda_basic_13',
    ['13/src/main.cpp',
     '13/src/simulation.cu',
     '13/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_14',
    ['14/src/main.cpp',
     '14/src/simulation.cu',
     '14/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_15',
    ['15/src/main.cpp',
     '15/src/simulation.cu',
     '15/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)

executable(
    'cuda_basic_16',
    ['16/src/main.cpp',
     '16/src/simulation.cu',
     '16/src/initialization.cu',
     'tools/data_export.cpp',
     'tools/data_processing.cu',
     'tools/utilities.cpp'],
    include_directories : [lib_incdirs, cuda_include],
    link_with : [lib],
    dependencies : [spdlog]
)
